--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -9,8 +9,8 @@
     "lint": "cd ../.. && eslint --fix packages/protocol --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "devDependencies": {
+    "mediasoup-client": "^3.6.68",
     "tsconfig": "*",
-    "typescript": "~4.9.4",
-    "mediasoup-client": "^3.6.68"
+    "typescript": "~4.9.4"
   }
 }
