add NEXTAUTH_URL to .env

--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ NEXT_PUBLIC_IPFS_ENDPOINT="http://localhost:5001"
 NEXT_PUBLIC_IPFS_GATEWAY="localhost:8080"
 
 NEXTAUTH_SECRET="123456789"
+NEXTAUTH_URL="localhost:3000"
 
 S3_ACCESS_KEY_ID="access_key"
 S3_BUCKET="wired"
