add zod types for client <-> host communication

--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "lint": "cd ../.. && eslint --fix packages/protocol --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
+  "dependencies": {
+    "zod": "^3.20.2"
+  },
   "devDependencies": {
     "mediasoup-client": "^3.6.68",
     "tsconfig": "*",
