--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -5,5 +5,6 @@
   },
   "exclude": ["node_modules", "build"],
   "include": ["src"],
-  "extends": "tsconfig/base.json"
+  "extends": "tsconfig/base.json",
+  "references": [{ "path": "../../packages/protocol" }]
 }
