--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "license": "GPL-3.0-or-later",
+  "type": "module",
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
