--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -3,8 +3,11 @@
     "rootDir": "./src",
     "outDir": "./build"
   },
-  "exclude": ["node_modules", "build"],
   "include": ["src"],
   "extends": "tsconfig/base.json",
-  "references": [{ "path": "../../packages/protocol" }]
+  "references": [
+    {
+      "path": "../../packages/protocol"
+    }
+  ]
 }
