--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -4,10 +4,5 @@
     "outDir": "./build"
   },
   "include": ["src"],
-  "extends": "tsconfig/base.json",
-  "references": [
-    {
-      "path": "../../packages/protocol"
-    }
-  ]
+  "extends": "tsconfig/base.json"
 }
