--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -7,6 +7,8 @@
   "main": "./build/index.js",
   "types": "./src/index.ts",
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
     "lint": "cd ../.. && eslint --fix packages/protocol --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "dependencies": {
