--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
   "background_color": "#ffffff",
   "categories": ["social", "games", "entertainment"],
-  "description": "An open and decentralized web-based metaverse platform.",
+  "description": "An open metaverse platform.",
   "display": "minimal-ui",
   "icons": [
     {
