setup behavior extension

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -15,6 +15,7 @@
     "@gltf-transform/extensions": "2.5.1",
     "@gltf-transform/functions": "2.5.1",
     "@pixiv/three-vrm": "^1.0.8",
+    "behave-graph": "^0.9.10",
     "contracts": "*",
     "nanoid": "^4.0.0",
     "property-graph": "^1.0.1",
