--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,6 +20,7 @@
     "@next/bundle-analyzer": "13.1.6",
     "@next/font": "13.1.4",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-context-menu": "^2.1.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.5",
     "@tanstack/react-query": "^4.22.3",
@@ -27,6 +28,7 @@
     "@trpc/next": "10.9.0",
     "@trpc/react-query": "10.9.0",
     "@trpc/server": "10.10.0",
+    "behave-graph": "^0.9.10",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
@@ -45,7 +47,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-split": "^2.0.14",
-    "rxjs": "^7.8.0",
+    "reactflow": "^11.5.5",
     "sharp": "^0.31.3",
     "siwe": "^2.1.3",
     "wagmi": "^0.9.6",
