--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "~3.204.0",
     "@aws-sdk/s3-request-presigner": "~3.204.0",
+    "@behave-graph/core": "^0.9.13",
     "@gltf-transform/core": "2.5.1",
     "@gltf-transform/extensions": "2.4.7",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -28,7 +29,6 @@
     "@trpc/next": "10.9.0",
     "@trpc/react-query": "10.9.0",
     "@trpc/server": "10.10.0",
-    "behave-graph": "^0.9.10",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
