--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -63,6 +63,7 @@
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/sharp": "^0.31.1",
     "autoprefixer": "^10.4.13",
     "dotenv-cli": "^7.0.0",
     "eslint": "^8.33.0",
