--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -14,13 +14,10 @@
     "@dimforge/rapier3d": "^0.11.1",
     "@gltf-transform/core": "3.0.1",
     "@gltf-transform/extensions": "3.0.1",
-    "@gltf-transform/functions": "3.0.0",
     "@pixiv/three-vrm": "^1.0.8",
-    "contracts": "*",
     "nanoid": "^4.0.1",
     "property-graph": "^1.0.3",
-    "three": "^0.148.0",
-    "zod": "^3.20.6"
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "@types/offscreencanvas": "^2019.7.0",
