--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "~3.204.0",
     "@aws-sdk/s3-request-presigner": "~3.204.0",
-    "@behave-graph/core": "^0.9.13",
     "@gltf-transform/core": "3.0.1",
     "@gltf-transform/functions": "3.0.1",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -34,6 +33,7 @@
     "@trpc/next": "10.12.0",
     "@trpc/react-query": "10.12.0",
     "@trpc/server": "10.11.0",
+    "@wired-labs/behave-graph-core": "^0.9.14",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
