--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -10,11 +10,11 @@
     "lint": "cd ../.. && eslint --fix packages/engine --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore"
   },
   "dependencies": {
-    "@behave-graph/core": "^0.9.13",
     "@dimforge/rapier3d": "^0.11.1",
     "@gltf-transform/core": "3.0.1",
     "@gltf-transform/extensions": "3.0.1",
     "@pixiv/three-vrm": "^1.0.8",
+    "@wired-labs/behave-graph-core": "^0.9.14",
     "nanoid": "^4.0.1",
     "property-graph": "^1.0.3",
     "three": "^0.148.0"
