--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -56,6 +56,7 @@
     "reactflow": "^11.5.5",
     "sharp": "^0.31.3",
     "siwe": "^2.1.3",
+    "swr": "^2.0.4",
     "wagmi": "^0.11.7",
     "zod": "^3.20.6",
     "zustand": "^4.3.3"
