--- a/.dockerignore
+++ b/.dockerignore
@@ -12,7 +12,9 @@ out/
 build
 
 # other
-dist/
+.turbo
+.docusaurus
+.vscode
 
 # misc
 .DS_Store
@@ -30,15 +32,12 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# turbo
-.turbo
-
 # typescript
 *.tsbuildinfo
-
-# vscode
-.vscode
 
 # codegen
 generated
 packages/contracts/contracts
+
+# client
+.vercel
