--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo build",
+    "build": "dotenv -c -- turbo build",
     "deploy": "turbo deploy",
-    "dev": "turbo dev",
+    "dev": "dotenv -c -- turbo dev",
     "format": "prettier --write .",
     "generate": "turbo generate",
     "postinstall": "patch-package",
     "lint": "turbo lint"
   },
   "devDependencies": {
+    "dotenv-cli": "^7.1.0",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.4",
