--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,12 @@
+# docker
+Dockerfile
+.dockerignore
+docker/
+
 # dependencies
 node_modules
 .pnp
 .pnp.js
-
-# testing
-coverage
 
 # next.js
 .next/
@@ -15,6 +17,7 @@ build
 .turbo
 .docusaurus
 .vscode
+README.md
 
 # misc
 .DS_Store
@@ -25,12 +28,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # typescript
 *.tsbuildinfo
