add helper docker scripts

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "dotenv -c -- turbo build",
     "deploy": "turbo deploy",
     "dev": "dotenv -c -- turbo dev",
+    "docker:dev": "docker compose up -d && yarn dev",
+    "docker:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up",
+    "docker:stop": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "format": "prettier --write .",
     "generate": "turbo generate",
     "postinstall": "patch-package",
