--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -6,13 +6,36 @@
   "display": "minimal-ui",
   "icons": [
     {
-      "src": "images/Logo.png",
+      "src": "images/Icon-Maskable.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
+    },
+    {
+      "src": "images/Icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "any"
+    },
+    {
+      "src": "images/Icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any"
     }
   ],
   "name": "The Wired",
   "scope": "/",
+  "shortcuts": [
+    {
+      "name": "Home",
+      "url": "/"
+    },
+    {
+      "name": "Explore",
+      "url": "/explore"
+    }
+  ],
   "short_name": "Wired",
   "splash_pages": null,
   "start_url": "/",
