--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@docusaurus/core": "^2.2.0",
+    "@docusaurus/plugin-ideal-image": "^2.3.1",
+    "@docusaurus/plugin-sitemap": "^2.3.1",
     "@docusaurus/preset-classic": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
