move env files to client

--- a/apps/client/Dockerfile
+++ b/apps/client/Dockerfile
@@ -15,9 +15,6 @@ RUN apk add --no-cache libc6-compat git
 RUN apk update
 WORKDIR /app
 
-# Install dotenv-cli
-RUN yarn global add dotenv-cli
-
 # First install the dependencies (as they change less often)
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
@@ -27,10 +24,6 @@ RUN yarn install
 # Apply patches
 COPY patches patches
 RUN yarn patch-package
-
-# Copy over .env files
-COPY .env .env
-COPY .env.local .env.local
 
 # Build the project
 COPY --from=builder /app/out/full/ .
@@ -43,13 +36,10 @@ COPY turbo.json turbo.json
 # ARG TURBO_TOKEN
 # ENV TURBO_TOKEN=$TURBO_TOKEN
 
-RUN dotenv -c -- yarn turbo run build --filter=client...
+RUN yarn turbo run build --filter=client...
 
 FROM node:alpine AS runner
 WORKDIR /app
-
-# Install dotenv-cli
-RUN yarn global add dotenv-cli
 
 # Don't run production as root
 RUN addgroup --system --gid 1001 nodejs
@@ -65,8 +55,4 @@ COPY --from=installer --chown=nextjs:nodejs /app/apps/client/.next/standalone ./
 COPY --from=installer --chown=nextjs:nodejs /app/apps/client/.next/static ./apps/client/.next/static
 COPY --from=installer --chown=nextjs:nodejs /app/apps/client/public ./apps/client/public
 
-# Copy over .env files
-COPY .env .env
-COPY .env.local .env.local
-
-CMD ["dotenv", "-c", "--", "node", "apps/client/server.js"]
+CMD ["node", "apps/client/server.js"]
