--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "~3.282.0",
     "@aws-sdk/s3-request-presigner": "~3.282.0",
+    "@ducanh2912/next-pwa": "^8.1.1",
     "@gltf-transform/core": "3.1.1",
     "@gltf-transform/functions": "3.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -38,7 +39,6 @@
     "next": "13.2.1",
     "next-auth": "4.20.1",
     "next-axiom": "^0.17.0",
-    "next-pwa": "^5.6.0",
     "protocol": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
