--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "extends": "tsconfig/nextjs.json",
   "include": [
-    "**/*.ts",
+    ".next/types/**/*.ts",
+    "**/*.js",
     "**/*.mjs",
+    "**/*.ts",
     "**/*.tsx",
-    "src/**/*.json",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
+    "src/**/*.json"
   ],
   "references": [
     {
