fix dev docker build

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -9,7 +9,7 @@ MYSQL_ROOT_PASSWORD="passworddb"
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
 NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
 
-DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}"
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
 NEXTAUTH_SECRET="123456789"
 NEXTAUTH_URL="http://localhost:3000"
 
