--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "next build",
-    "deploy": "dotenv -e .env.local prisma db push",
+    "deploy": "dotenv -c -- prisma db push",
     "dev": "next dev",
     "generate": "prisma generate",
     "lint": "cd ../.. && eslint --fix apps/client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
@@ -59,7 +59,6 @@
     "@types/react-dom": "^18.0.10",
     "@types/sharp": "^0.31.1",
     "autoprefixer": "^10.4.13",
-    "dotenv-cli": "^7.1.0",
     "eslint": "^8.36.0",
     "eslint-config-custom": "*",
     "postcss": "^8.4.21",
