--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "build": "turbo build",
     "deploy": "turbo deploy",
     "dev": "turbo dev",
-    "docker:dev": "docker compose up --build -d && yarn dev",
-    "docker:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build",
-    "docker:stop": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
+    "docker:build": "dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
+    "docker:dev": "yarn docker:stop && dotenv -e ./apps/client/.env -- docker compose up --build -d && yarn dev",
+    "docker:prod": "yarn docker:stop && dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build",
+    "docker:stop": "dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "format": "prettier --write .",
     "generate": "turbo generate",
     "postinstall": "patch-package",
     "lint": "turbo lint"
   },
   "devDependencies": {
+    "dotenv-cli": "^7.1.0",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.4",
