--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -8,10 +8,10 @@
     "build": "tsc --build tsconfig.json",
     "deploy": "yarn docker:build && docker push ghcr.io/wired-labs/host",
     "dev": "nodemon ./src/server.ts",
-    "docker:build": "yarn docker:clean && cd ../.. && docker build -t ghcr.io/wired-labs/host -f apps/host/Dockerfile .",
-    "docker:clean": "yarn docker:stop && docker rmi ghcr.io/wired-labs/host || true",
-    "docker:start": "yarn docker:stop && docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/wired-labs/host",
-    "docker:stop": "docker stop wired-host || true",
+    "docker:build": "yarn docker:clean || cd ../.. && docker build -t ghcr.io/wired-labs/host -f apps/host/Dockerfile .",
+    "docker:clean": "yarn docker:stop || docker rmi ghcr.io/wired-labs/host",
+    "docker:start": "yarn docker:stop || docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/wired-labs/host",
+    "docker:stop": "docker stop wired-host",
     "lint": "cd ../.. && eslint --fix apps/host --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
     "start": "node --experimental-specifier-resolution=node ./build/server.js"
   },
