move docs url to env variable

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -8,6 +8,7 @@ MYSQL_ROOT_PASSWORD="passworddb"
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
 NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
+NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
 
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
 NEXTAUTH_SECRET="123456789"
