--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,7 @@
         "NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
         "NEXT_PUBLIC_CDN_ENDPOINT",
         "NEXT_PUBLIC_DEFAULT_HOST",
+        "NEXT_PUBLIC_DEPLOYED_URL",
         "NEXT_PUBLIC_DOCS_URL",
         "NEXTAUTH_SECRET",
         "NEXTAUTH_URL",
