--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --write .",
     "generate": "turbo generate",
     "postinstall": "patch-package",
-    "lint": "turbo lint"
+    "lint": "turbo lint",
+    "publish-packages": "turbo run lint build && changeset version && changeset publish"
   },
   "devDependencies": {
     "dotenv-cli": "^7.1.0",
@@ -33,5 +34,8 @@
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=7.0.0"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.26.0"
   }
 }
