--- a/apps/client/.gitignore
+++ b/apps/client/.gitignore
@@ -1,3 +1,10 @@
+# next.js
+.next/
+out/
+
+# other
+.vercel
+
 # PWA files
 **/public/sw.js
 **/public/workbox-*.js
@@ -5,6 +12,3 @@
 **/public/sw.js.map
 **/public/workbox-*.js.map
 **/public/worker-*.js.map
-
-# other
-.vercel
