add org name to gltf-extensions

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,11 +29,11 @@
     "@rainbow-me/rainbowkit": "^0.11.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
     "@wired-labs/behave-graph-core": "^0.9.19",
+    "@wired-labs/gltf-extensions": "*",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
     "ethers": "^5.7.2",
-    "gltf-extensions": "*",
     "mediasoup-client": "^3.6.82",
     "meshoptimizer": "^0.18.1",
     "nanoid": "^4.0.1",
