--- a/packages/gltf-extensions/package.json
+++ b/packages/gltf-extensions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gltf-extensions",
+  "name": "@wired-labs/gltf-extensions",
   "version": "0.1.0",
   "license": "GPL-3.0-or-later",
   "type": "module",
