--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -19,7 +19,8 @@
     "@wired-labs/gltf-extensions": "*",
     "nanoid": "^4.0.1",
     "property-graph": "^1.1.0",
-    "three": "^0.148.0"
+    "three": "^0.148.0",
+    "three-mesh-bvh": "^0.5.23"
   },
   "devDependencies": {
     "@types/offscreencanvas": "^2019.7.0",
