--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "generate": "turbo generate",
     "postinstall": "patch-package",
     "lint": "turbo lint",
-    "publish-packages": "turbo run lint build && changeset version && changeset publish"
+    "release": "turbo run lint build && changeset version && changeset publish"
   },
   "dependencies": {
     "@changesets/cli": "^2.26.0"
