--- a/packages/gltf-extensions/package.json
+++ b/packages/gltf-extensions/package.json
@@ -18,5 +18,8 @@
     "tsconfig": "*",
     "tsup": "^6.7.0",
     "typescript": "~5.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
