--- a/packages/gltf-extensions/package.json
+++ b/packages/gltf-extensions/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@wired-labs/gltf-extensions",
   "version": "0.2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wired-labs/wired.git",
+    "directory": "packages/gltf-extensions"
+  },
   "license": "GPL-3.0-or-later",
   "type": "module",
   "main": "./dist/index.js",
