update publish-host workflow

--- a/.github/workflows/publish-host.yml
+++ b/.github/workflows/publish-host.yml
@@ -1,9 +1,9 @@
 name: Publish Host
 
 on:
-  release:
-    types: [released]
-    GITHUB_REF: refs/tags/host@*
+  push:
+    tags:
+      - host@*
 
 env:
   REGISTRY: ghcr.io
