publish protocol package as @wired-labs/protocol

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,6 +30,7 @@
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
     "@wired-labs/behave-graph-core": "^0.9.19",
     "@wired-labs/gltf-extensions": "*",
+    "@wired-labs/protocol": "*",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
@@ -40,7 +41,6 @@
     "next": "13.2.4",
     "next-auth": "4.20.1",
     "next-axiom": "^0.17.0",
-    "protocol": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
