--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,6 +31,7 @@
     "@wired-labs/behave-graph-core": "^0.9.19",
     "@wired-labs/gltf-extensions": "*",
     "@wired-labs/protocol": "*",
+    "@wired-labs/react-client": "*",
     "boring-avatars": "^1.7.0",
     "contracts": "*",
     "engine": "*",
@@ -55,6 +56,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
