move light-client space id  to env

--- a/apps/light-client/.env
+++ b/apps/light-client/.env
@@ -1,2 +1,5 @@
+# Replace with the ID of the space you want to use
+NEXT_PUBLIC_SPACE_ID=13
+
 # Replace with your own provider
 ETH_PROVIDER="https://arb-goerli.g.alchemy.com/v2/r929aQmql0AG4KwGruntEZ5pcroLEXQ3"
