--- a/apps/light-client/.env
+++ b/apps/light-client/.env
@@ -1,5 +1,7 @@
+NEXT_PUBLIC_DEFAULT_HOST="wss://host.thewired.space"
+
 # Replace with the ID of the space you want to use
-NEXT_PUBLIC_SPACE_ID=73
+NEXT_PUBLIC_SPACE_ID="73"
 
 # Replace with your own provider
 ETH_PROVIDER="https://arb-goerli.g.alchemy.com/v2/r929aQmql0AG4KwGruntEZ5pcroLEXQ3"
