--- a/turbo.json
+++ b/turbo.json
@@ -43,7 +43,7 @@
     "light-client#build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**"],
-      "env": ["ETH_PROVIDER", "NEXT_PUBLIC_SPACE_ID"]
+      "env": ["ETH_PROVIDER", "NEXT_PUBLIC_DEFAULT_HOST", "NEXT_PUBLIC_SPACE_ID"]
     },
     "lint": {},
     "generate": {
