--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -5,8 +5,8 @@
   "license": "GPL-3.0-or-later",
   "type": "module",
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts",
-    "dev": "concurrently \"yarn build -- --watch\" \"nodemon ./dist/index.js\"",
+    "build": "tsup src/server.ts --format esm --dts",
+    "dev": "concurrently \"yarn build -- --watch\" \"nodemon ./dist/server.js\"",
     "docker:build": "yarn docker:clean || cd ../.. && docker build -t ghcr.io/wired-labs/host -f apps/host/Dockerfile .",
     "docker:clean": "yarn docker:stop || docker rmi ghcr.io/wired-labs/host",
     "docker:start": "yarn docker:stop || docker run --rm -e RTC_MIN_PORT=20000 -e RTC_MAX_PORT=20020 -e MEDIASOUP_ANNOUNCED_IP=127.0.0.1 -p 4000:4000 -p 20000-20020:20000-20020/tcp -p 20000-20020:20000-20020/udp --name wired-host ghcr.io/wired-labs/host",
