--- a/packages/gltf-extensions/tsconfig.json
+++ b/packages/gltf-extensions/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": "./src",
+    "outDir": "./dist",
     "composite": false,
     "incremental": false
   },
