use typedoc packages mode for docs generation

--- a/apps/docs/.gitignore
+++ b/apps/docs/.gitignore
@@ -7,10 +7,7 @@
 # Generated files
 .docusaurus
 .cache-loader
-docs-api/engine
-docs-api/gltf-extensions
-docs-api/protocol
-docs-api/react-client
+docs-api/
 
 # Misc
 .DS_Store
