--- a/packages/gltf-extensions/package.json
+++ b/packages/gltf-extensions/package.json
@@ -26,5 +26,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "typedoc": {
+    "displayName": "glTF-Extensions",
+    "entryPoint": "./src/index.ts"
   }
 }
