--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -26,5 +26,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "typedoc": {
+    "displayName": "Protocol",
+    "entryPoint": "./src/index.ts"
   }
 }
