--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -35,5 +35,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "typedoc": {
+    "displayName": "React-Client",
+    "entryPoint": "./src/index.ts"
   }
 }
