update publish host workflow

--- a/.github/workflows/publish-host.yml
+++ b/.github/workflows/publish-host.yml
@@ -31,13 +31,13 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          labels: |
+            org.opencontainers.image.description="Host server for The Wired"
           tags: |
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/host@0.') }}
-            type=sha
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
