--- a/.github/workflows/publish-host.yml
+++ b/.github/workflows/publish-host.yml
@@ -33,8 +33,11 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           labels: |
             org.opencontainers.image.description="Host server for The Wired"
+          flavor: |
+            prefix=host@
           tags: |
-            type=match,pattern=\d.\d.\d
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
