--- a/.github/workflows/publish-host.yml
+++ b/.github/workflows/publish-host.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           labels: |
-            org.opencontainers.image.description="Host server for The Wired"
+            org.opencontainers.image.description=Host server for The Wired
           tags: |
             type=match,pattern=\d.\d.\d
 
