--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,8 @@
         "S3_ENDPOINT",
         "S3_REGION",
         "S3_SECRET",
+        "SKIP_ENV_VALIDATION",
+        "VERCEL",
         "VERCEL_URL"
       ]
     },
