add player profile fetching to react-client

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -19,6 +19,7 @@
     "@wired-labs/protocol": "*",
     "contracts": "*",
     "engine": "*",
+    "ethers": "^5.7.2",
     "mediasoup-client": "^3.6.82",
     "nanoid": "^4.0.1"
   },
