add avatar browser menu

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -11,6 +11,9 @@ NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
 NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
 NEXT_PUBLIC_DEPLOYED_URL="https://www.thewired.space"
 
+# Remove the "$2b$10$" from the start of you API key
+NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
+
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
 NEXTAUTH_SECRET="123456789"
 NEXTAUTH_URL="http://localhost:3000"
