--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,7 @@
         "NEXT_PUBLIC_ALCHEMY_ID",
         "NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT",
         "NEXT_PUBLIC_CDN_ENDPOINT",
+        "NEXT_PUBLIC_CRYPTOAVATARS_API_KEY",
         "NEXT_PUBLIC_DEFAULT_HOST",
         "NEXT_PUBLIC_DEPLOYED_URL",
         "NEXT_PUBLIC_DOCS_URL",
