--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -36,7 +36,7 @@
       "url": "/explore"
     }
   ],
-  "short_name": "Wired",
+  "short_name": "The Wired",
   "splash_pages": null,
   "start_url": "/",
   "theme_color": "#191919"
