fix docs generation

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -27,5 +27,9 @@
     "@types/three": "^0.148.0",
     "tsconfig": "*",
     "typescript": "~5.0.2"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "displayName": "Engine"
   }
 }
