--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -36,5 +36,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "displayName": "React-Client"
   }
 }
