--- a/packages/gltf-extensions/package.json
+++ b/packages/gltf-extensions/package.json
@@ -27,5 +27,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "displayName": "glTF-Extensions"
   }
 }
