fix docker build error

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -1,9 +1,9 @@
 # Database
-#MYSQL_ROOT_HOST= "%"
-#MYSQL_DATABASE="wired"
-#MYSQL_USER="userdb"
-#MYSQL_PASSWORD="passworddb"
-#MYSQL_ROOT_PASSWORD="passworddb"
+MYSQL_ROOT_HOST= "%"
+MYSQL_DATABASE="wired"
+MYSQL_USER="userdb"
+MYSQL_PASSWORD="passworddb"
+MYSQL_ROOT_PASSWORD="passworddb"
 
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
@@ -14,16 +14,17 @@ NEXT_PUBLIC_DEPLOYED_URL="https://www.thewired.space"
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
 
-#DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
+DISABLE_PWA="true"
 
 NEXTAUTH_SECRET="123456789"
 NEXTAUTH_URL="http://localhost:3000"
 
-#S3_ACCESS_KEY_ID="access_key"
-#S3_BUCKET="wired"
-#S3_ENDPOINT="127.0.0.1:9000"
-#S3_REGION="us-east-1"
-#S3_SECRET="secret_key"
+S3_ACCESS_KEY_ID="access_key"
+S3_BUCKET="wired"
+S3_ENDPOINT="127.0.0.1:9000"
+S3_REGION="us-east-1"
+S3_SECRET="secret_key"
 
 # Replace with your own provider
 ETH_PROVIDER="https://arb-goerli.g.alchemy.com/v2/r929aQmql0AG4KwGruntEZ5pcroLEXQ3"
