--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "deploy": "turbo deploy",
     "dev": "turbo dev --filter=!tsconfig --filter=!eslint-config-custom --filter=!contracts --filter=!engine",
     "docker:build": "dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
-    "docker:dev": "yarn docker:stop || dotenv -e ./apps/client/.env -- docker compose up --build -d && yarn dev",
-    "docker:prod": "yarn docker:stop || dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build",
+    "docker:dev": "yarn docker:stop && dotenv -e ./apps/client/.env -- docker compose up --build -d && yarn dev",
+    "docker:prod": "yarn docker:stop && dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build",
     "docker:stop": "dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "format": "prettier --write .",
     "generate": "turbo generate",
