--- a/apps/client/.env
+++ b/apps/client/.env
@@ -10,6 +10,8 @@ NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
 NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
 NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
 NEXT_PUBLIC_DEPLOYED_URL="https://www.thewired.space"
+NEXT_PUBLIC_HAS_DATABASE="true"
+NEXT_PUBLIC_HAS_S3="true"
 
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
