--- a/apps/client/.env
+++ b/apps/client/.env
@@ -29,4 +29,4 @@ S3_REGION="us-east-1"
 S3_SECRET="secret_key"
 
 # Replace with your own provider
-ETH_PROVIDER="https://arb-goerli.g.alchemy.com/v2/r929aQmql0AG4KwGruntEZ5pcroLEXQ3"
+ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFIYJQ"
