fix build when no database provided

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -10,8 +10,8 @@ NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
 NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
 NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
 NEXT_PUBLIC_DEPLOYED_URL="https://www.thewired.space"
-NEXT_PUBLIC_HAS_DATABASE="true"
-NEXT_PUBLIC_HAS_S3="true"
+NEXT_PUBLIC_HAS_DATABASE="false"
+NEXT_PUBLIC_HAS_S3="false"
 
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
@@ -22,11 +22,11 @@ DISABLE_PWA="true"
 NEXTAUTH_SECRET="123456789"
 NEXTAUTH_URL="http://localhost:3000"
 
+# Replace with your own provider
+ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFIYJQ"
+
 S3_ACCESS_KEY_ID="access_key"
 S3_BUCKET="wired"
 S3_ENDPOINT="127.0.0.1:9000"
 S3_REGION="us-east-1"
 S3_SECRET="secret_key"
-
-# Replace with your own provider
-ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFIYJQ"
