fix docker build

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -4,19 +4,20 @@ MYSQL_DATABASE="wired"
 MYSQL_USER="userdb"
 MYSQL_PASSWORD="passworddb"
 MYSQL_ROOT_PASSWORD="passworddb"
+MYSQL_PORT="3306"
 
 # Client
 NEXT_PUBLIC_CDN_ENDPOINT="localhost:9999"
 NEXT_PUBLIC_DEFAULT_HOST="host.thewired.space"
 NEXT_PUBLIC_DOCS_URL="http://localhost:3100"
 NEXT_PUBLIC_DEPLOYED_URL="https://www.thewired.space"
-NEXT_PUBLIC_HAS_DATABASE="false"
-NEXT_PUBLIC_HAS_S3="false"
+NEXT_PUBLIC_HAS_DATABASE="true"
+NEXT_PUBLIC_HAS_S3="true"
 
 # Remove the "$2b$10$" from the start of you API key
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
 
-DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@host.docker.internal:${MYSQL_PORT}/${MYSQL_DATABASE}"
 DISABLE_PWA="true"
 
 NEXTAUTH_SECRET="123456789"
@@ -27,6 +28,7 @@ ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFI
 
 S3_ACCESS_KEY_ID="access_key"
 S3_BUCKET="wired"
-S3_ENDPOINT="127.0.0.1:9000"
 S3_REGION="us-east-1"
 S3_SECRET="secret_key"
+S3_PORT="9000"
+S3_ENDPOINT="127.0.0.1:${S3_PORT}"
