--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "next build",
-    "deploy": "dotenv -c -- prisma db push",
+    "deploy": "dotenv -c -- prisma db push --accept-data-loss",
     "dev": "next dev",
     "generate": "prisma generate",
     "lint": "cd ../.. && eslint --fix apps/client --ext .js,.cjs,.mjs,.jsx,.ts,.tsx,.json --ignore-path .prettierignore",
