--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "build": "turbo build",
     "deploy": "turbo deploy",
     "dev": "turbo dev --filter=!tsconfig --filter=!eslint-config-custom --filter=!contracts --filter=!engine",
-    "docker:build": "dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
-    "docker:dev": "yarn docker:stop && dotenv -e ./apps/client/.env -- docker compose up --build -d && yarn dev",
-    "docker:prod": "yarn docker:stop && dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build",
-    "docker:stop": "dotenv -e ./apps/client/.env -- docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
+    "docker:build": "dotenv -e ./apps/client/.env -e ./apps/client/.env.docker -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
+    "docker:dev": "yarn docker:stop && dotenv -e ./apps/client/.env -e ./apps/client/.env.docker -c -- docker compose up --build -d && yarn deploy && yarn dev",
+    "docker:prod": "yarn docker:stop && dotenv -e ./apps/client/.env -e ./apps/client/.env.docker -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d && yarn deploy",
+    "docker:stop": "dotenv -e ./apps/client/.env -e ./apps/client/.env.docker -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "format": "prettier --write .",
     "generate": "turbo generate",
     "postinstall": "patch-package",
